--- a/C1Pros Image Processor/Info.plist
+++ b/C1Pros Image Processor/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>com.captureintegration.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.C1Pros.ImageProcessor</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
